// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInReducer should matches the check sign in begin state 1`] = `
Object {
  "error": null,
  "loading": true,
  "loggedIn": false,
  "token": null,
}
`;

exports[`SignInReducer should matches the check sign in error state 1`] = `
Object {
  "error": undefined,
  "loading": false,
  "loggedIn": false,
  "token": null,
}
`;

exports[`SignInReducer should matches the check sign in successful state 1`] = `
Object {
  "error": null,
  "loading": false,
  "loggedIn": true,
  "token": "ae6b174a-4259-4f02-a302-3dd3ca555414",
}
`;

exports[`SignInReducer should matches the initial state 1`] = `
Object {
  "error": null,
  "loading": false,
  "loggedIn": false,
  "token": null,
}
`;
